--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ main li h5 {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
+/*footer*/
 .footer {
   background-image: url(upsell-footer-image.png);
   background-repeat: no-repeat;
